--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -47,6 +47,7 @@
         android:fontFamily="@font/open_sans_light"
         android:textColor="@color/colorDarkRed"
         android:textSize="64sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/record_filename" />
@@ -60,20 +61,40 @@
         android:src="@drawable/record_btn_stopped"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/record_timer" />
+        app:layout_constraintTop_toBottomOf="@id/record_timer"
+        app:layout_constraintVertical_bias="0.54" />
 
     <ImageButton
         android:id="@+id/record_list_btn"
+        android:layout_width="57dp"
+        android:layout_height="51dp"
         android:background="@android:color/white"
-        app:layout_constraintTop_toTopOf="@id/record_btn"
-        app:layout_constraintBottom_toBottomOf="@id/record_btn"
-        app:layout_constraintStart_toEndOf="@id/record_btn"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="TODO"
         android:padding="16dp"
         android:src="@drawable/recorder_list_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="TODO" />
+        app:layout_constraintBottom_toBottomOf="@+id/record_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toEndOf="@id/record_btn"
+        app:layout_constraintTop_toTopOf="@id/record_btn"
+        app:layout_constraintVertical_bias="0.494" />
+
+    <EditText
+        android:id="@+id/editTextFileName"
+        android:layout_width="222dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="42dp"
+        android:ems="10"
+        android:fontFamily="@font/open_sans_semibold"
+        android:inputType="textPersonName"
+        android:text="@string/inputFilename"
+        android:textAlignment="center"
+        android:textColor="@color/colorDarkRed"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/record_filename" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
