--- a/app/src/main/res/layout/player_sheet.xml
+++ b/app/src/main/res/layout/player_sheet.xml
@@ -62,6 +62,7 @@
             android:layout_marginBottom="24dp"
             android:layout_weight="2"
             android:background="@color/colorPrimaryDark"
+            android:contentDescription="@string/desc_play"
             android:paddingTop="24dp"
             android:paddingBottom="24dp"
             app:srcCompat="@drawable/player_play_btn" />
@@ -78,11 +79,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:fontFamily="@font/open_sans_semibold"
                 android:gravity="bottom"
                 android:paddingBottom="5dp"
-                android:text="File Name"
+                android:text="@string/file_name"
                 android:textColor="@android:color/white"
                 android:textSize="20sp" />
 
@@ -91,10 +91,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:fontFamily="@font/open_sans_semibold"
                 android:gravity="top"
-                android:text="Artist, date, duration"
+                android:text="@string/artist"
                 android:textColor="@android:color/white"
                 android:textSize="16sp" />
         </LinearLayout>
@@ -118,6 +117,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="2"
+            android:contentDescription="@string/desc_close_arrow"
             android:paddingTop="24dp"
             android:paddingBottom="24dp"
             app:srcCompat="@android:drawable/arrow_down_float" />
