--- a/app/src/main/res/layout/player_sheet.xml
+++ b/app/src/main/res/layout/player_sheet.xml
@@ -2,7 +2,6 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/player_sheet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -112,15 +111,17 @@
             android:textSize="16sp" /> -->
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/navArrow"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="2"
+            android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/desc_close_arrow"
             android:paddingTop="24dp"
             android:paddingBottom="24dp"
-            app:srcCompat="@android:drawable/arrow_down_float" />
+            android:tint="@color/colorAccent"
+            app:srcCompat="@drawable/ic_arrow_up" />
 
     </LinearLayout>
 
